--- a/src/app/components/page/ingreso/registro/registro-paciente/registro-paciente.component.html
+++ b/src/app/components/page/ingreso/registro/registro-paciente/registro-paciente.component.html
@@ -67,5 +67,6 @@
             Credit card number is required
         </div>
     </div>
+    <button class="btn btn-primary btn-lg btn-block" type="submit">Registrarse</button>
 </div>
 
