--- a/src/app/components/page/ingreso/registro/registro-especialista/registro-especialista.component.html
+++ b/src/app/components/page/ingreso/registro/registro-especialista/registro-especialista.component.html
@@ -41,11 +41,10 @@
     </div>
 </div>
 
-
 <div class="row">
     <div class="col-md-6 mb-3">
         <label for="cc-name">Contraseña</label>
-        <input type="text" class="form-control" id="cc-name" placeholder="" required>
+        <input type="text" class="form-control" id="cc-name" placeholder="" required [(ngModel)]="usuario.password">
         <small class="text-muted">Full name as displayed on card</small>
         <div class="invalid-feedback">
             Name on card is required
@@ -53,22 +52,32 @@
     </div>
     <div class="col-md-6 mb-3">
         <label for="cc-number">Contraseña</label>
-        <input type="text" class="form-control" id="cc-number" placeholder="" required>
+        <input type="text" class="form-control" id="cc-number" placeholder="" required [(ngModel)]="usuario.password">
         <div class="invalid-feedback">
             Credit card number is required
         </div>
     </div>
 </div>
-<h4>
-    Selecciona tus especialidad:
-</h4>
-<div class="row" *ngFor="let check of checkEspecialidades">
-    <div class="col-4">
-        <input name="" type="checkbox" />{{check.especialidad}}
-    </div>
-</div>
-<div class="col-12">
 
-    <label for="firstName">Otra especialidad</label>
-    <input type="text" class="form-control" id="firstName" placeholder="" value="">
+
+
+<div class="row">
+
+    <div>
+        <h4>
+            Selecciona tus especialidad:
+        </h4>
+    </div>
+    <div class="col-4" *ngFor="let check of checkEspecialidades">
+        <div>
+            <input name="" type="checkbox" />{{check.especialidad}}
+        </div>
+    </div>
+    <div class="col-12">
+
+        <label for="firstName">Otra especialidad</label>
+        <input type="text" class="form-control" id="firstName" placeholder="" value="">
+    </div>
+
+    <button class="btn btn-primary btn-lg btn-block" type="submit">Registrarse</button>
 </div>
